--- a/kodilla-stream/build.gradle
+++ b/kodilla-stream/build.gradle
@@ -12,4 +12,5 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testImplementation('junit:junit:4.13')
+    testCompile('junit:junit:4.12')
 }
