--- a/kodilla-good-patterns/build.gradle
+++ b/kodilla-good-patterns/build.gradle
@@ -17,6 +17,8 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web:2.3.1.RELEASE'
     testImplementation 'org.springframework.boot:spring-boot-starter-test:2.3.1.RELEASE'
+    testCompile 'junit:junit:4.12'
+    compile 'junit:junit:4.12'
 }
 
 group = 'com.kodilla'
