--- a/settings.gradle
+++ b/settings.gradle
@@ -5,4 +5,7 @@ include 'exception'
 include 'kodilla-exception'
 include 'kodilla-rps'
 include 'kodilla-good-patterns'
+include 'kodilla-spring'
+include 'kodilla-spring'
+include 'kodilla-spring'
 
