--- a/settings.gradle
+++ b/settings.gradle
@@ -8,4 +8,5 @@ include 'kodilla-good-patterns'
 include 'kodilla-spring'
 include 'kodilla-spring'
 include 'kodilla-spring'
+include 'kodilla-patterns'
 
