--- a/settings.gradle
+++ b/settings.gradle
@@ -11,4 +11,6 @@ include 'kodilla-spring'
 include 'kodilla-patterns'
 include 'kodilla-jdbc'
 include 'kodilla-hibernate'
+include 'Sudoku'
+include 'kodilla-sudoku'
 
